--- a/lw5/lw5.2/css/style.css
+++ b/lw5/lw5.2/css/style.css
@@ -102,7 +102,7 @@
     margin: 25px 3px 1px;
     font-size: 28px;
     line-height: 42px;
-    color: #FFFFFF;
+    color: #FFF;
     font-style: italic;
     font-family: "Georgia";
 }
@@ -112,7 +112,7 @@
     margin: 2px 6px;
     font-size: 16px;
     line-height: 42px;
-    color: #FFFFFF;
+    color: #FFF;
     font-weight: 600;
     font-family: "Open Sans";
 }
@@ -129,7 +129,7 @@
     margin-bottom: 23px;
     font-size: 48px;
     line-height: 42px;
-    color: #333333;
+    color: #333;
     font-weight: 700;
     font-family: "Open Sans";
 }
@@ -140,7 +140,7 @@
     width: 100%;
     font-size: 19px;
     line-height: 32px;
-    color: #555555;
+    color: #555;
     font-family: "Georgia";
 }
 
@@ -149,14 +149,13 @@
     margin: 49px 0 5px;
     font-size: 36px;
     line-height: 27px;
-    color: #333333;
+    color: #333;
     font-weight: 400;
     font-family: "Open Sans";
 }
 
 .hobby
 {
-    width: 100%;
     margin-top: 23px;
 }
 
@@ -224,7 +223,7 @@
     padding-left: 17px;
     font-size: 19px;
     line-height: 36px;
-    color: #555555;
+    color: #555;
     font-family: "Georgia";
 }
 
@@ -268,7 +267,7 @@
     margin: 26px 0px 33px;
     font-size: 36px;
     line-height: 42px;
-    color: #333333;
+    color: #333;
     font-weight: 400;
     font-family: "Open Sans";
 }
@@ -289,7 +288,7 @@
     margin: 19px 0 17px 0;
     font-size: 22px;
     line-height: 32px;
-    color: #333333;
+    color: #333;
     font-weight: 700;
     font-family: "Open Sans";
 }
@@ -298,7 +297,7 @@
 {
     font-size: 16px;
     line-height: 28px;
-    color: #555555;
+    color: #555;
     font-family: "Georgia";
 }
 
@@ -352,7 +351,7 @@
     width: 200px;
     height: 1px;
     border: 0;
-    background-color: rgb(211, 211, 211);
+    background-color: #333;
 }
 
 .header__text
@@ -361,7 +360,7 @@
     margin: 0 26px;
     font-size: 36px;
     line-height: 42px;
-    color: #333333;
+    color: #333;
     font-weight: 300;
     font-family: "Open Sans";
 }
@@ -379,7 +378,7 @@
     padding-bottom: 5px;
     font-size: 20px;
     line-height: 32px;
-    color: #333333;
+    color: #333;
     font-weight: 400;
     font-family: "Open Sans";
 }
@@ -419,7 +418,7 @@
 {
     font-size: 18px;
     line-height: 32px;
-    color: #555555;
+    color: #555;
     font-weight: 400;
     font-family: "Open Sans";
 }
@@ -433,7 +432,7 @@
 {
     margin: 0 36px 0 3px;
     padding-bottom: 5px;
-    color: #333333;
+    color: #333;
     font: 400 18px/32px "Open Sans";
 }
 
@@ -502,7 +501,7 @@
     margin-top: 19px;
     font-size: 16px;
     line-height: 32px;
-    color: #555555;
+    color: #555;
     font-family: "Georgia";
 }
 
