--- a/lw6/css/style.css
+++ b/lw6/css/style.css
@@ -142,7 +142,7 @@
 .container
 {
     flex-direction: column;
-    width: 100%; 
+    width: 100%;
 }
 
 .grid__container
@@ -225,7 +225,6 @@
 
 .block-movies__button
 {
-    display: flex;
     justify-content: center;
     margin-bottom: 50px;
 }
@@ -403,11 +402,10 @@
         background-repeat: no-repeat;
         background-position: center 50px;
         padding: 0;
-    }    
-    
+    }
+
     .grid__container
     {
-        display: grid;
         grid-template-rows: 350px 50px 56% 70px;
         grid-template-columns: 44% 56%;
         grid-column-gap: 30px;
@@ -457,7 +455,7 @@
     }
 
     .favorit
-    {   
+    {
         margin-top: 50px;
         grid-column: 1;
         grid-row: 3;
@@ -510,7 +508,6 @@
         background-color: #f9f9f9;
         width: 100%;
         margin-top: 50px;
-        display: flex;
         justify-content: center;
     }
 
@@ -537,7 +534,6 @@
     {
         margin-right: 20px;
         margin-bottom: 50px;
-        display: flex;
         justify-content: center;
     }
 
@@ -573,6 +569,7 @@
 
     .postscript
     {
+        margin: 0;
         background-color: #f9f9f9;
     }
 }
@@ -586,28 +583,26 @@
 
     .grid__container
     {
-        display: grid;
         grid-template-rows: 300px 70px 53% 90px;
         grid-template-columns: 40% 60%;
-        grid-column-gap: 30px;
     }
 
     .avatar
     {
         margin-top: 0;
     }
-    
+
     .favorit
     {
         margin: 0;
     }
-    
+
     .header__name
     {
         margin-top: 0;
         color: #000;
     }
-    
+
     .title
     {
         margin-top: 50px;
@@ -630,22 +625,14 @@
 {
     .grid__container
     {
-        display: grid;
         grid-template-rows: 175px 175px 460px 70px;
         grid-template-columns: 330px 600px;
-        grid-column-gap: 30px;
     }
 
-    .avatar
-    {
-        grid-column: 1;
-        grid-row: 1/3;
-    }
 
     .header
     {
         align-self: start;
-        grid-column: 2;
         grid-row: 2;
     }
 
@@ -653,7 +640,6 @@
 
     {
         grid-column: 2;
-        grid-row: 4;
     }
 
     .panel__navbar
@@ -725,7 +711,7 @@
     {
         align-items: flex-start;
     }
-    
+
     .favorit__header
     {
         margin: 45px 0 13px 0;
