--- a/lw7/web/css/style.css
+++ b/lw7/web/css/style.css
@@ -1,3 +1,13 @@
+*
+{
+    margin: 0;
+}
+
+.background
+{
+    padding: 0 5%;
+}
+
 .navbar__element
 {
     display: flex;
@@ -95,7 +105,7 @@
 
 .favorit__header
 {
-    margin: 0;
+    margin: 20px;
     font: 600 24px/32px "Open Sans";
     color: #15a98c;
 }
@@ -181,12 +191,12 @@
 
 .write-me
 {
+    margin-top: 30px;
     grid-row: 7;
 }
 
 .block-movies
 {
-    background-color: #f9f9f9;
     display: flex;
     flex-direction: column;
     margin-top: 100px;
@@ -194,8 +204,9 @@
 
 .storage__cinema
 {
-    font: 400 36px/42px "Open Sans";
+    font: 400 31px/42px "Open Sans";
     color: #333;
+    margin: 30px 0px 33px;
 }
 
 .descriptions__movies
@@ -219,12 +230,6 @@
     margin-bottom: 50px;
 }
 
-.content__button
-{
-    margin-top: 50px;
-}
-
-.content__button,
 .button__films
 {
     font: 19px/32px "Georgia";
@@ -236,6 +241,7 @@
     background-color: #15a98c;
 
 }
+
 .button__films:hover
 {
     background-color: #098d71;
@@ -270,8 +276,14 @@
     flex-direction: column;
 }
 
+.form__header
+{
+    margin-top: 0px;
+}
+
 .form__content
 {
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
 }
@@ -327,6 +339,7 @@
 {
     color: #333333;
     font: 400 18px/32px "Open Sans";
+    margin: 0 36px 0 3px;
 }
 
 .content__write
@@ -364,7 +377,6 @@
     margin: 50px 0 50px;
 }
 
-
 .errors-input
 {
     font: 400 20px/32px "Open Sans";
@@ -396,15 +408,14 @@
 .postscript
 {
     height: 70px;
-    background-color: #f9f9f9;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .postcript__paragarph
 {
     font: 16px/32px "Georgia";
-    background-color: #f9f9f9;
     color: #555555;
     text-align: center;
 }
@@ -417,7 +428,6 @@
         height: 30px;
         background-repeat: no-repeat;
         background-position: center 50px;
-        margin: 0;
         padding: 0;
     }    
     
@@ -432,8 +442,9 @@
     .avatar
     {
         grid-column: 1;
-        grid-row: 1/2;
+        grid-row: 1/3;
         margin: auto;
+        margin-top: 80px;
     }
 
     .header
@@ -442,7 +453,6 @@
         grid-column: 2;
         grid-row: 1;
         align-self: end;
-
     }
 
     .cherta
@@ -473,11 +483,13 @@
     }
 
     .favorit
-    {
-        margin-top: 0;
+    {   
+        margin-top: 50px;
         grid-column: 1;
         grid-row: 3;
-        margin-left: 19%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .write-me
@@ -521,6 +533,7 @@
 
     .block-movies
     {
+        background-color: #f9f9f9;
         width: 100%;
         margin-top: 50px;
         display: flex;
@@ -564,6 +577,7 @@
         display: inline-flex;
         align-items: center;
         margin-top: 70px;
+        margin-bottom:  30px;
     }
 
     .header__line
@@ -573,6 +587,7 @@
         height: 1px;
         border: 0;
         background-color:  #727272;
+        margin: 0 26px;
     }
 
     .form__content
@@ -580,6 +595,11 @@
         width: 540px;
         display: flex;
         flex-direction: column;
+    }
+
+    .postscript
+    {
+        background-color: #f9f9f9;
     }
 }
 
@@ -598,31 +618,37 @@
         grid-column-gap: 30px;
     }
 
+    .avatar
+    {
+        margin-top: 0;
+    }
+    
+    .favorit
+    {
+        margin: 0;
+    }
+    
     .header__name
     {
         margin-top: 0;
         color: #000;
     }
     
-    .favorit
-    {
-        margin-left: 19%;
-    }
-
-    .favorit__header
-    {
-        margin: 0 0;
-    }
-
     .title
     {
-        margin-top: 0;
         align-self: start;
     }
 
     .write-me
     {
         align-self: start;
+    }
+
+    .send
+    {
+        display: flex;
+        justify-content: flex-start;
+        margin: 46px 0 50px;
     }
 }
 
@@ -723,7 +749,7 @@
 
     .favorit
     {
-        margin-left: 0;
+        align-items: flex-start;
     }
     
     .favorit__header
@@ -757,7 +783,7 @@
     {
         display: inline-flex;
         justify-content: start;
-        margin: 30px 0px 33px;
+        font-size: 36px;
     }
 
     .storage__pages
@@ -772,23 +798,18 @@
 
     .form__header
     {
-        margin-top: 25px;
-    }
-
-    .header__line
-    {
-         margin: 0 26px;
+        margin: 25px 0 30px 0;
     }
 
     .form
     {
-        margin: 0 10px 0 0;
+        margin: 30px 10px 0 0;
     }
 
     .form__content
     {
         width: 540px;
-        margin: 36px 0 48px 8px;
+        margin: 36px 0 0px 0;
     }
 
     .content__printing
@@ -798,7 +819,6 @@
 
     .radio
     {
-        margin: 0 36px 0 3px;
         padding-bottom: 5px;
     }
 
@@ -807,16 +827,8 @@
         margin: 3px 0 0 2px;
     }
 
-    .send
-    {
-        display: flex;
-        justify-content: flex-start;
-        margin: 46px 0 3px;
-    }
-
         .postcript__paragarph
     {
-        margin-top: 10px;
         margin-right: 20px;
     }
 }
