--- a/lw6/css/style.css
+++ b/lw6/css/style.css
@@ -139,12 +139,6 @@
     border-bottom: 1px solid #fff;
 }
 
-.container
-{
-    flex-direction: column;
-    width: 100%;
-}
-
 .grid__container
 {
     display: grid;
@@ -225,6 +219,7 @@
 
 .block-movies__button
 {
+    display: flex;
     justify-content: center;
     margin-bottom: 50px;
 }
